Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33979

Qt for iOS compilation error

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.2.0
    • 5.2.0 Alpha
    • QPA
    • None
    • OS X 10.8
    • iOS/tvOS/watchOS
    • 76e795f818df09610b769346c402f1408f13131a

    Description

      the configure line looks like:

      ./configure -commercial -confirm-license -release -nomake tests -nomake examples -sdk iphoneos6.1 -qt-zlib -qt-libjpeg -qt-libpng -no-pkg-config -xplatform macx-ios-clang -no-sql-mysql -DQT_EVAL -prefix /work/build/______________________________PADDING______________________________
      

      and the error is

      12:09:51 Ld Release-iphoneos/qmlscene.app/qmlscene normal armv7
      12:09:51     cd /work/build/qt5_workdir/w/s/qtdeclarative/tools/qmlscene
      12:09:51     /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -arch armv7 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS6.1.sdk -L/work/build/qt5_workdir/w/s/qtdeclarative/tools/qmlscene/Release-iphoneos -L/work/build/qt5_workdir/w/s/qtdeclarative/tools/qmlscene/.obj/release-static/qmlscene.build/Release-iphoneos/qmlscene.build/Objects-normal/armv7 -F/work/build/qt5_workdir/w/s/qtdeclarative/tools/qmlscene/Release-iphoneos -filelist /work/build/qt5_workdir/w/s/qtdeclarative/tools/qmlscene/.obj/release-static/qmlscene.build/Release-iphoneos/qmlscene.build/Objects-normal/armv7/qmlscene.LinkFileList -dead_strip -headerpad_max_install_names -u _qt_registerPlatformPlugin -Wl,-no_new_main -nostartfiles -lcrt1_qt.o -L/work/build/qt5_workdir/w/s/qtbase/plugins/platforms -framework UIKit -L/work/build/qt5_workdir/w/s/qtbase/lib -framework OpenGLES -L/work/build/qt5_workdir/w/s/qtdeclarative/lib -ldl -lz -lm -miphoneos-version-min=5.0 -lqios -framework Foundation -framework QuartzCore -framework CoreFoundation -framework CoreText -framework CoreGraphics -lQt5PlatformSupport -lQt5Quick -framework Security -framework SystemConfiguration -lQt5Qml -lQt5Widgets -lQt5Network -lQt5Gui -lQt5Core -o /work/build/qt5_workdir/w/s/qtdeclarative/tools/qmlscene/Release-iphoneos/qmlscene.app/qmlscene
      12:09:51 Undefined symbols for architecture armv7:
      12:09:51   "__Unwind_Backtrace", referenced from:
      12:09:51       QV4::NativeStackTrace::NativeStackTrace(QV4::ExecutionContext*) in libQt5Qml.a(qv4stacktrace.o)
      12:09:51 ld: symbol(s) not found for architecture armv7
      12:09:51 clang: error: linker command failed with exit code 1 (use -v to see invocation)
      12:09:51 
      12:09:51 
      12:09:51 make[3]: *** [xcodebuild_build] Error 65
      12:09:51 make[2]: *** [sub-qmlscene-make_first] Error 2
      12:09:52 ** BUILD FAILED **
      12:09:52 
      12:09:52 
      12:09:52 The following build commands failed:
      12:09:52 	Ld Release-iphoneos/qmltestrunner.app/qmltestrunner normal armv7
      12:09:52 (1 failure)
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              shausman Simon Hausmann
              seahumad [BB] Sergio Ahumada (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes